2005-09-02  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (coprocessor_opcodes): Add null terminator.

2005-09-02  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (coprocessor_opcodes): New.
	(arm_opcodes, thumb32_opcodes): Remove coprocessor insns.
	(print_insn_coprocessor): New function.
	(print_insn_arm): Use print_insn_coprocessor.  Remove coprocessor
	format characters.
	(print_insn_thumb32): Use print_insn_coprocessor.

2005-08-30  Paul Brook  <paul@codesourcery.com>

	* arm-dis.c (thumb_opcodes): Disassemble sub(3) as subs.

2005-08-26  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (intel_operand_size): New, broken out from OP_E for
	re-use.
	(OP_E): Call intel_operand_size, move call site out of mode
	dependent code.
	(OP_OFF): Call intel_operand_size if suffix_always. Remove
	ATTRIBUTE_UNUSED from parameters.
	(OP_OFF64): Likewise.
	(OP_ESreg): Call intel_operand_size.
	(OP_DSreg): Likewise.
	(OP_DIR): Use colon rather than semicolon as separator of far
	jump/call operands.

2005-08-25  Chao-ying Fu  <fu@mips.com>

	* mips-opc.c (WR_a, RD_a, MOD_a, DSP_VOLA, D32): New define.
	(mips_builtin_opcodes): Add DSP instructions.
	* mips-dis.c (mips_arch_choices): Enable INSN_DSP for mips32, mips32r2,
	mips64, mips64r2.
	(print_insn_args): Add supports for 3, 4, 5, 6, 7, 8, 9, 0, :, ', @
	operand formats.

2005-08-23  David Ung  <davidu@mips.com>

	* mips16-opc.c (mips16_opcodes): Add the MIPS16e jalrc/jrc
	instructions to the table. 

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* a29k-dis.c: Delete.
	* Makefile.am: Remove a29k support.
	* configure.in: Likewise.
	* disassemble.c: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2005-08-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* ppc-dis.c (powerpc_dialect): Handle e300.
	(print_ppc_disassembler_options): Likewise.
	* ppc-opc.c (PPCE300): Define.
	(powerpc_opcodes): Mark icbt as available for the e300.
